--- a/src/views/index.html
+++ b/src/views/index.html
@@ -112,7 +112,7 @@
         <section class="prices" id="prices">
             <article class="prices">
                 <div class="subtitle-container">
-                    <h2><span id="fc">Start free,</span><span id="lc"> Pay only if you like it!</span></h2>
+                    <h2><span id="fc">Start free</span><span id="lc">, Pay only if you like it!</span></h2>
                 </div>
                 <div class="content-container">
                     <div class="big">
@@ -183,9 +183,9 @@
                     <h2>Learn how to generate your first report</h2>
                 </div>
                 <div class="video-container">
-                    <video controls>
-                        <source src="videos/demo.mp4" type="video/mp4">
-                    </video>
+                    <iframe src="https://www.youtube.com/embed/QqlwTtSqp9A" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                    </iframe>
                 </div>
             </article>
         </section>
@@ -206,7 +206,7 @@
                     </div>
                 </div>
             </div>
-            </div>
+        </div>
         </div>
         <section class="contact" id="contact">
             <div class="contact-content">
