--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -284,15 +284,14 @@ section.features div.subtitle-container h2 {
   text-align: center;
   font-weight: 700;
   font-size: 32px;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  margin-left: -300px;
   opacity: 0;
 }
 
 section.features div.feature-cards {
   height: 100%;
   width: 100%;
-  margin: 0 0 32px 0;
+  margin: 32px 0;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[4];
@@ -321,32 +320,31 @@ section.features div.feature-cards article {
 }
 
 section.features div.feature-cards article:nth-child(1) {
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  margin-left: -30%;
   opacity: 0;
 }
 
 section.features div.feature-cards article:nth-child(2) {
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  margin-left: -30%;
   opacity: 0;
 }
 
 section.features div.feature-cards article:nth-child(3) {
-  -webkit-transform: translateX(50%);
-          transform: translateX(50%);
+  margin-left: -10%;
   opacity: 0;
 }
 
 section.features div.feature-cards article:nth-child(4) {
-  -webkit-transform: translateX(50%);
-          transform: translateX(50%);
+  margin-left: -10%;
   opacity: 0;
 }
 
 section.features div.feature-cards article div.feature-card-img img {
-  width: 281px;
-  height: 281px;
+  width: 241px;
+  height: 241px;
+  padding: 30px;
+  background: #ccc;
+  border-radius: 100%;
 }
 
 section.features div.feature-cards article div.text-container h3 {
@@ -398,6 +396,10 @@ section.prices article.prices div.subtitle-container h2 span {
   opacity: 0;
 }
 
+section.prices article.prices div.subtitle-container h2 span:last-child {
+  margin-left: -50%;
+}
+
 section.prices article.prices div.content-container {
   width: 100%;
   margin-top: 40px;
@@ -421,13 +423,19 @@ section.prices article.prices div.content-container div.big {
       -ms-flex: .68;
           flex: .68;
   min-height: 100%;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 section.prices article.prices div.content-container div.big div.price-card {
+  width: 30%;
   border: 4px solid #fff;
   height: 100%;
   display: -webkit-box;
@@ -446,9 +454,17 @@ section.prices article.prices div.content-container div.big div.price-card {
   padding-bottom: 250px;
 }
 
+section.prices article.prices div.content-container div.big div.price-card:nth-child(1) {
+  background: #00AAC4;
+  margin-bottom: -30px;
+  opacity: 0;
+}
+
 section.prices article.prices div.content-container div.big div.price-card:nth-child(2) {
   background: #fff;
   position: relative;
+  margin-bottom: -20px;
+  opacity: 0;
 }
 
 section.prices article.prices div.content-container div.big div.price-card:nth-child(2)::before {
@@ -461,6 +477,12 @@ section.prices article.prices div.content-container div.big div.price-card:nth-c
   height: 10%;
   top: -10%;
   left: -8px;
+}
+
+section.prices article.prices div.content-container div.big div.price-card:nth-child(3) {
+  background: #00AAC4;
+  margin-bottom: -30px;
+  opacity: 0;
 }
 
 section.prices article.prices div.content-container div.big div.price-card header {
@@ -510,6 +532,9 @@ section.prices article.prices div.content-container div.small {
 
 section.prices article.prices div.content-container div.small div.subtitle-container {
   margin-bottom: 16px;
+  -webkit-transform: translateX(20%);
+          transform: translateX(20%);
+  opacity: 0;
 }
 
 section.prices article.prices div.content-container div.small div.subtitle-container h2 {
@@ -521,6 +546,9 @@ section.prices article.prices div.content-container div.small div.subtitle-conta
 
 section.prices article.prices div.content-container div.small div.paragraph-container {
   margin-bottom: 16px;
+  -webkit-transform: translateX(20%);
+          transform: translateX(20%);
+  opacity: 0;
 }
 
 section.prices article.prices div.content-container div.small div.paragraph-container p {
@@ -533,6 +561,9 @@ section.prices article.prices div.content-container div.small div.paragraph-cont
 
 section.prices article.prices div.content-container div.small div.button-container {
   margin-top: 16px;
+  opacity: 0;
+  -webkit-transform: translateX(30px);
+          transform: translateX(30px);
 }
 
 section.prices article.prices div.content-container div.small div.button-container a {
@@ -584,18 +615,20 @@ section.videos div.subtitle-container h2 {
   font-size: 32px;
   font-weight: 700;
   color: white;
+  margin-left: -30%;
   opacity: 0;
 }
 
 section.videos article.demo-video div.video-container {
   width: 100%;
   padding-bottom: 32px;
+  text-align: center;
 }
 
-section.videos article.demo-video div.video-container video {
+section.videos article.demo-video div.video-container iframe {
   width: 100%;
-  -webkit-transform: translateX(200%);
-          transform: translateX(200%);
+  height: 500px;
+  opacity: 0;
 }
 
 div.getting-started {
