--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -254,7 +254,8 @@ section.features{
             font-size: 32px;
 
             //animation-property
-            transform: translateX(-50%);
+            // transform: translateY(-1350%);
+            margin-left: -300px;
             opacity: 0;
         }
     }
@@ -262,7 +263,7 @@ section.features{
     div.feature-cards{
         height: 100%;
         width: 100%;
-        margin: 0 0 32px 0;
+        margin: 32px 0;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         align-content: center;
@@ -276,26 +277,30 @@ section.features{
 
             //transition-property
             &:nth-child(1){
-                transform: translateX(-50%);
+                margin-left: -30%;
                 opacity: 0;
             }
             &:nth-child(2){
-                transform: translateX(-50%);
+                margin-left: -30%;
                 opacity: 0;
             }
             &:nth-child(3){
-                transform: translateX(50%);
+                margin-left: -10%;
                 opacity: 0;
             }
             &:nth-child(4){
-                transform: translateX(50%);
+                margin-left: -10%;
                 opacity: 0;
             }
 
             div.feature-card-img{
                 img{
-                    width: 281px;
-                    height: 281px;
+                    width: 241px;
+                    height: 241px;
+
+                    padding: 30px;
+                    background: #ccc;
+                    border-radius: 100%;
                 }
             }
 
@@ -341,6 +346,10 @@ section.prices{
                 span{
                     //transition-property
                     opacity: 0;
+
+                    &:last-child{
+                        margin-left: -50%;
+                    }
                 }
             }
         }
@@ -356,10 +365,12 @@ section.prices{
             div.big {
                 flex: .68;
                 min-height: 100%;
-                display: grid;
-                grid-template-columns: 1fr 1fr 1fr;
+                display: flex;
+                align-items: center;
+                justify-content: center;
 
                 div.price-card{
+                    width: 30%;
                     border: 4px solid #fff;
                     height: 100%;
                     display: flex;
@@ -368,9 +379,17 @@ section.prices{
                     justify-content: space-between;
                     padding-bottom: 250px;
 
+                    &:nth-child(1){
+                        background: $primary-blue;
+                        margin-bottom: -30px;
+                        opacity: 0;
+                    }
                     &:nth-child(2){
                         background: #fff;
                         position: relative;
+
+                        margin-bottom: -20px;
+                        opacity: 0;
 
                         &::before{
                             content: '';
@@ -383,6 +402,11 @@ section.prices{
                             top: -10%;
                             left: -8px;
                         }
+                    }
+                    &:nth-child(3){
+                        background: $primary-blue;
+                        margin-bottom: -30px;
+                        opacity: 0;
                     }
 
                     header{
@@ -412,6 +436,11 @@ section.prices{
 
                 div.subtitle-container{
                     margin-bottom: 16px;
+
+                    //transition-property
+                    transform: translateX(20%);
+                    opacity: 0;
+
                     h2{
                         font-size: 36px;
                         color: white;
@@ -421,6 +450,12 @@ section.prices{
                 }
                 div.paragraph-container{
                     margin-bottom: 16px;
+
+                    //transition-property
+                    // margin-top: -30px;
+                    transform: translateX(20%);
+                    opacity: 0;
+
                     p{
                         width: 70%;
                         text-align: start;
@@ -431,6 +466,10 @@ section.prices{
                 }
                 div.button-container{
                     margin-top: 16px;
+                    
+                    //transition-property
+                    opacity: 0;
+                    transform: translateX(30px);
 
                     a{
                         position: relative;
@@ -479,6 +518,7 @@ section.videos{
             color: white;
 
             //trasition-property
+            margin-left: -30%;
             opacity: 0;
         }
     }
@@ -487,12 +527,14 @@ section.videos{
         div.video-container{
             width: 100%;
             padding-bottom: 32px;
+            text-align: center;
 
-            video{
+            iframe{
                 width: 100%;
+                height: 500px;
 
-                //trasition-property
-                transform: translateX(200%);
+                //transition-property
+                opacity: 0;
             }
         }
     }
