--- a/src/views/messageReceived.html
+++ b/src/views/messageReceived.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Zabbix Reports | Support</title>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Zabbix Reports - Message Received</title>
+
+    <link rel="stylesheet" href="/stylesheets/support/index.css">
 </head>
 <body>
-    <h1>Message Received</h1>
+    <main>
+        <section>
+            <h1>Zabbix Reports</h1>
+            <h2>We received your message</h2>
+            <h3>We will send you an email with all the answers you are looking for!</h3>
+            <a href="/">Go back</a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
