--- a/public/stylesheets/index/index.css
+++ b/public/stylesheets/index/index.css
@@ -546,8 +546,6 @@ section.prices article.prices div.content-container div.small div.subtitle-conta
 
 section.prices article.prices div.content-container div.small div.paragraph-container {
   margin-bottom: 16px;
-  -webkit-transform: translateX(20%);
-          transform: translateX(20%);
   opacity: 0;
 }
 
@@ -556,14 +554,12 @@ section.prices article.prices div.content-container div.small div.paragraph-cont
   text-align: start;
   font-size: 17px;
   color: white;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 section.prices article.prices div.content-container div.small div.button-container {
   margin-top: 16px;
   opacity: 0;
-  -webkit-transform: translateX(30px);
-          transform: translateX(30px);
 }
 
 section.prices article.prices div.content-container div.small div.button-container a {
@@ -626,6 +622,7 @@ section.videos article.demo-video div.video-container {
 }
 
 section.videos article.demo-video div.video-container iframe {
+  z-index: 10;
   width: 100%;
   height: 500px;
   opacity: 0;
@@ -655,6 +652,8 @@ div.getting-started div.subtitle-container h2 {
   font-size: 32px;
   font-weight: 700;
   color: #757E85;
+  margin-bottom: 15px;
+  opacity: 0;
 }
 
 div.getting-started div.content {
@@ -688,6 +687,8 @@ div.getting-started div.content div.content-left img {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   max-width: 500px;
+  margin-bottom: -50%;
+  opacity: 0;
 }
 
 div.getting-started div.content div.content-right {
@@ -707,6 +708,8 @@ div.getting-started div.content div.content-right {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  opacity: 0;
+  margin-bottom: .30px;
 }
 
 div.getting-started div.content div.content-right h3 {
@@ -746,13 +749,13 @@ section.contact div.contact-content article.faq {
   -webkit-box-flex: .4;
       -ms-flex: .4;
           flex: .4;
-  -webkit-transform: translateX(-800%);
-          transform: translateX(-800%);
 }
 
 section.contact div.contact-content article.faq h2 {
   font-size: 32px;
   color: #005E72;
+  margin-left: -50px;
+  opacity: 0;
 }
 
 section.contact div.contact-content article.faq div.dropdown {
@@ -771,6 +774,8 @@ section.contact div.contact-content article.faq div.dropdown div.row {
   padding: 8px 8px 0px 4px;
   border-bottom: 0.5px solid #cfcfcf;
   cursor: pointer;
+  margin-left: -40px;
+  opacity: 0;
 }
 
 section.contact div.contact-content article.faq div.dropdown div.row:last-child {
@@ -897,6 +902,7 @@ section.contact div.contact-content article.contact-form {
 section.contact div.contact-content article.contact-form h2 {
   font-size: 32px;
   color: #005E72;
+  margin-left: 30px;
   opacity: 0;
 }
 
