--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,11 +10,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="theme-color" content="#727176" />
 
-    <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/resp_1150.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/resp_945.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/resp_750.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/resp_516.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index/index.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index/resp_1150.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index/resp_945.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index/resp_750.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index/resp_516.css">
 </head>
 
 <body>
@@ -57,7 +57,7 @@
                         <p>With <strong>Zabbix Reports</strong> you can generate data reports from the best data
                             analysis
                             platforms!</p>
-                        <a href="#getting-started" class="try-it-btn">Try it now</a>
+                        <a href="#getting-started" id="gs-link" class="try-it-btn">Try it now</a>
                     </div>
                 </div>
                 <div class="home-content-right">
@@ -195,7 +195,7 @@
             </div>
             <div class="content">
                 <div class="content-left">
-                    <img src="/images/illustrations/rocket.svg" alt="rocket">
+                    <img id="rocket" src="/images/illustrations/rocket.svg" alt="rocket">
                 </div>
                 <div class="content-right">
                     <h3>Sign in with these credentials</h3>
@@ -206,7 +206,6 @@
                     </div>
                 </div>
             </div>
-        </div>
         </div>
         <section class="contact" id="contact">
             <div class="contact-content">
