--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title>Zabbix Reports</title>
+    <title>Zabbix Reports Index</title>
     <link rel="shortcut icon" href="/images/icons/favicon.ico" />
 
     <meta charset="UTF-8" />
