--- a/src/views/index.html
+++ b/src/views/index.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="content-container">
                     <div class="big">
-                        <div class="price-card">
+                        <div class="price-card" id="alone">
                             <header>
                                 <h4>Alone</h4>
                             </header>
@@ -130,7 +130,7 @@
                                 <span>Lorem</span>
                             </div>
                         </div>
-                        <div class="price-card">
+                        <div class="price-card" id="customize">
                             <header>
                                 <h4>Customize</h4>
                             </header>
@@ -144,7 +144,7 @@
                                 <span>Lorem</span>
                             </div>
                         </div>
-                        <div class="price-card">
+                        <div class="price-card" id="reseller">
                             <header>
                                 <h4>Reseller</h4>
                             </header>
@@ -169,7 +169,8 @@
                                 making your <strong>reports</strong>.</p>
                         </div>
                         <div class="button-container">
-                            <a href="#">
+                            <!-- LINK DO PAY PAL AQUI -->
+                            <a id="pay-pal-btn" href="LINK DO PAY PAL AQUI">
                                 <img src="/images/icons/paypal.svg" alt="paypal logo">
                             </a>
                         </div>
@@ -183,9 +184,9 @@
                     <h2>Learn how to generate your first report</h2>
                 </div>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/QqlwTtSqp9A" frameborder="0"
+                    <!-- <iframe src="https://www.youtube.com/embed/QqlwTtSqp9A" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                    </iframe>
+                    </iframe> -->
                 </div>
             </article>
         </section>
@@ -299,6 +300,7 @@
     <script src="/javascripts/index/dropdown.js"></script>
     <script src="/javascripts/index/smoothScroll.js"></script>
     <script src="/javascripts/index/animations.js"></script>
+    <script src="/javascripts/index/cards.js"></script>
 </body>
 
 </html>
