--- a/public/stylesheets/index/index.css
+++ b/public/stylesheets/index/index.css
@@ -16,6 +16,12 @@
   background: #00AAC4;
 }
 
+* .selected-card {
+  background: #fff;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
 * a {
   text-decoration: none;
 }
@@ -452,35 +458,46 @@ section.prices article.prices div.content-container div.big div.price-card {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding-bottom: 250px;
+  position: relative;
+  -webkit-transition: 280ms;
+  transition: 280ms;
+}
+
+section.prices article.prices div.content-container div.big div.price-card:hover {
+  cursor: pointer;
+  background: #fff;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+section.prices article.prices div.content-container div.big div.price-card::before {
+  content: '';
+  background: #fff;
+  border-left: 4px solid #fff;
+  border-right: 4px solid #fff;
+  position: absolute;
+  width: 100%;
+  height: 10%;
+  top: -10%;
+  left: -4px;
+  opacity: 0;
+  -webkit-transition: 280ms;
+  transition: 280ms;
 }
 
 section.prices article.prices div.content-container div.big div.price-card:nth-child(1) {
-  background: #00AAC4;
   margin-bottom: -30px;
   opacity: 0;
 }
 
 section.prices article.prices div.content-container div.big div.price-card:nth-child(2) {
-  background: #fff;
-  position: relative;
   margin-bottom: -20px;
   opacity: 0;
-}
-
-section.prices article.prices div.content-container div.big div.price-card:nth-child(2)::before {
-  content: '';
-  background: #fff;
-  border-left: 8px solid #fff;
-  border-right: 8px solid #fff;
-  position: absolute;
-  width: 100%;
-  height: 10%;
-  top: -10%;
-  left: -8px;
+  border-right: none;
+  border-left: none;
 }
 
 section.prices article.prices div.content-container div.big div.price-card:nth-child(3) {
-  background: #00AAC4;
   margin-bottom: -30px;
   opacity: 0;
 }
@@ -494,6 +511,7 @@ section.prices article.prices div.content-container div.big div.price-card heade
 }
 
 section.prices article.prices div.content-container div.big div.price-card div.content {
+  pointer-events: none;
   margin-top: 8px;
   display: -webkit-box;
   display: -ms-flexbox;
